syntax = "proto3";

package auth;

option go_package = "github.com/huseyinbabal/grpc-in-30-minutes/pkg/auth";

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse);
}


