syntax = "proto3";

package product;

option go_package = "github.com/huseyinbabal/grpc-in-30-minutes/pkg/product";

message ProductRequest {
    int32 id = 1;
}

message ProductResponse {
    int32 id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
    string image = 5;
}

service ProductService {
    rpc GetProduct (ProductRequest) returns (ProductResponse) {}
}
